Fix overflow horizontal scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,4 @@ html,
 body,
 #root {
 	height: 100%;
-	/* overflow: hidden; */
-	overflow-x: scroll;
 }
